--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		  <div class="column is-three-quarters">
 				<div  style="display: inline-block" id="{{item1.id}}" ng-repeat="item1 in raduisStyle" ng-mouseup="moveObjraduisStyle(item1.id)" ng-init="">
 					{{ initraduisStyle() }}
-					<div style="padding-top: 79%;padding-left: 24%;">
-						<button ng-click="tranformcctv(item1.id)">{{ item1.id }}</button>
+					<div style="padding-top: 79%;padding-left: 24%;" ng-click="tranformcctv(item1.id)">
+						<!-- <button ng-click="tranformcctv(item1.id)">{{ item1.id }}</button> -->
 						<button ng-click="delcctv(item1.id)">del</button>
 					</div>
 				</div>
