--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 				<nav class="nav">
 		  <div class="nav-left">
 		    <a class="nav-item is-brand" href="#">
-		      <!-- <img src="http://bulma.io/images/bulma-type.png" alt="Bulma logo"> -->
 		    </a>
 		  </div>
 
@@ -42,10 +41,6 @@
 		      <a class="button is-primary" ng-click='click()'>
 		        <span>Import</span>
 		      </a>
-			<!-- 		<a class="button is-primary" ng-click="insert()">
-		        <span>WIFI</span>
-		      </a> -->
-
 					<a class="button is-info" ng-click="Dome()">
 		        <span>Dome</span>
 		      </a>
@@ -55,9 +50,6 @@
 					<a class="button is-warning" ng-click="Bullet()">
 						<span>Bullet</span>
 					</a>
-				<!-- 	<a class="button is-warning" ng-click="testLens()">
-						<span>TestLen</span>
-					</a> -->
 		    </span>
 		  </div>
 		</nav>
@@ -68,7 +60,6 @@
 				<div  style="display: inline-block" id="{{item1.id}}" ng-repeat="item1 in raduisStyle" ng-mouseup="moveObjraduisStyle(item1.id)" ng-init="">
 					{{ initraduisStyle();countStyle() }}
 					<div style="padding-top: 79%;padding-left: 24%;" >
-					<!-- <div style="padding-top: 79%;padding-left: 24%;" ng-click="tranformcctv(item1.id)"> -->
 						<button ng-click="tranformcctv(item1.id, $index)">{{ item1.id }}</button>
 						<button ng-click="delcctv(item1.id, $index)">del</button>
 					</div>
@@ -80,25 +71,25 @@
 				<div ng-show="page==='Bullet'">
 				Bullet<br>
 				<a class="button is-primary" ng-click="raduis_bullet(18)">
-					<span>CCTV 18</span>
+					<span>CCTV 16 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(28)">
-					<span>CCTV 28</span>
+					<span>CCTV 12 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(33.4)">
-					<span>CCTV 33</span>
+					<span>CCTV 8 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(48)">
-					<span>CCTV 48</span>
+					<span>CCTV 6 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(70.6)">
-					<span>CCTV 70.6</span>
+					<span>CCTV 4 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(80)">
-					<span>CCTV 80</span>
+					<span>CCTV 3.6 mm</span>
 				</a>
 				<a class="button is-primary" ng-click="raduis_bullet(150)">
-					<span>CCTV 150</span>
+					<span>CCTV 2.8 mm</span>
 				</a>
 				<hr>
 				<div ng-show="showRange">
@@ -107,9 +98,6 @@
 					<form ng-submit="cctvSubmit()">
 						<input type="range" min="0" max="360" ng-model="range"> {{ range }} <button ng-click="showRange=false" type="submit">X</button>
 						<input type="range" min="0" max="500" ng-model="width"> {{ width }} <br>
-						<!-- <input type="radio"  value="30" ng-model="width"> 30
-						<input type="radio"  value="60" ng-model="width"> 60
-						<input type="radio"  value="90" ng-model="width"> 90 -->
 					</form>
 					<form ng-submit="setplace(place)">
 						<input type="radio"  name="place" value="Corridor" ng-model="place" checked> Corridor
@@ -124,25 +112,25 @@
 			<div ng-show="page==='Box'">
 			Box<br>
 			<a class="button is-primary" ng-click="raduis_box(18)">
-				<span>CCTV 18</span>
+				<span>CCTV 16 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(28)">
-				<span>CCTV 28</span>
+				<span>CCTV 12 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(33.4)">
-				<span>CCTV 33</span>
+				<span>CCTV 8 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(48)">
-				<span>CCTV 48</span>
+				<span>CCTV 6 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(70.6)">
-				<span>CCTV 70.6</span>
+				<span>CCTV 4 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(80)">
-				<span>CCTV 80</span>
+				<span>CCTV 3.6 mm</span>
 			</a>
 			<a class="button is-primary" ng-click="raduis_box(150)">
-				<span>CCTV 150</span>
+				<span>CCTV 2.8 mm</span>
 			</a>
 			<hr>
 			<div ng-show="showRange">
@@ -151,9 +139,6 @@
 				<form ng-submit="cctvSubmit()">
 					<input type="range" min="0" max="360" ng-model="range"> {{ range }} <button ng-click="showRange=false" type="submit">X</button>
 					<input type="range" min="0" max="500" ng-model="width"> {{ width }} <br>
-					<!-- <input type="radio"  value="30" ng-model="width"> 30
-					<input type="radio"  value="60" ng-model="width"> 60
-					<input type="radio"  value="90" ng-model="width"> 90 -->
 				</form>
 				<form ng-submit="setplace(place)">
 					<input type="radio"  name="place" value="Corridor" ng-model="place" checked> Corridor
@@ -167,25 +152,25 @@
 		<div ng-show="page==='Dome'">
 		Dome<br>
 		<a class="button is-primary" ng-click="raduis_dome(18)">
-			<span>CCTV 18</span>
+			<span>CCTV 16 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(28)">
-			<span>CCTV 28</span>
+			<span>CCTV 12 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(33.4)">
-			<span>CCTV 33</span>
+			<span>CCTV 8 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(48)">
-			<span>CCTV 48</span>
+			<span>CCTV 6 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(70.6)">
-			<span>CCTV 70.6</span>
+			<span>CCTV 4 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(80)">
-			<span>CCTV 80</span>
+			<span>CCTV 3.6 mm</span>
 		</a>
 		<a class="button is-primary" ng-click="raduis_dome(150)">
-			<span>CCTV 150</span>
+			<span>CCTV 2.8 mm</span>
 		</a>
 		<hr>
 		<div ng-show="showRange">
@@ -208,9 +193,6 @@
 		</div>
 		</div>
 
-		<!-- closepage 1 == activetitle -->
-
-
 		<div class="columns" ng-show="pagetitle === 'modal'">
 		  <div class="column is-one-quarter">
 		     <input type="range" min="0" max="100" ng-init="sizeLens = 1.4" ng-model="sizeLens"> {{sizeLens}}
@@ -220,152 +202,6 @@
 		    <img src="./img/test.jpg" width="434" height="326" style="transform: scale({{sizeLens}});">
 		  </div>
 		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-		<!-- <div class="columns">
-			  <div class="column">
-					<div ng-show="page==='Bullet'">
-					Bullet<br>
-					<a class="button is-primary" ng-click="raduis(18)">
-						<span>CCTV 18</span>
-					</a>
-					<a class="button is-primary" ng-click="raduis(28)">
-						<span>CCTV 28</span>
-					</a>
-					<a class="button is-primary" ng-click="raduis(33.4)">
-						<span>CCTV 33</span>
-					</a> <br>
-					<a class="button is-primary" ng-click="raduis(48)">
-						<span>CCTV 48</span>
-					</a>
-					<a class="button is-primary" ng-click="raduis(70.6)">
-						<span>CCTV 70.6</span>
-					</a>
-					<a class="button is-primary" ng-click="raduis(80)">
-						<span>CCTV 80</span>
-					</a>
-					<a class="button is-primary" ng-click="raduis(150)">
-						<span>CCTV 150</span>
-					</a>
-					<hr>
-				</div>
-			  </div>
-			  <div class="column" ng-show="showImage">
-					<figure class="image is-1240x768">
-						<img src="{{ data.b64 }}">
-					</figure>
-			  </div>
-			  <div class="column">
-			    Fourth column
-			  </div>
-		</div>
-	</div> -->
-
-		<!-- <div class="columns">
-			<div class="column">
-					<div id="column_left"> -->
-						<!-- type 1  จำนวน : {{countCctv}} <hr> <br>
-						<a class="button is-primary" ng-click="raduis(18)">
-			        <span>CCTV 18</span>
-			      </a>
-						<a class="button is-primary" ng-click="raduis(28)">
-							<span>CCTV 28</span>
-						</a>
-						<a class="button is-primary" ng-click="raduis(33.4)">
-							<span>CCTV 33</span>
-						</a>
-						<a class="button is-primary" ng-click="raduis(48)">
-							<span>CCTV 48</span>
-						</a>
-						<a class="button is-primary" ng-click="raduis(70.6)">
-							<span>CCTV 70.6</span>
-						</a>
-						<a class="button is-primary" ng-click="raduis(80)">
-							<span>CCTV 80</span>
-						</a>
-						<a class="button is-primary" ng-click="raduis(150)">
-							<span>CCTV 150</span>
-						</a>
-						<hr> -->
-
-						<!-- <div ng-show="showRange">
-							<br>
-							raduis cctv {{idCctv}}
-							<form ng-submit="cctvSubmit()">
-								<input type="range" min="0" max="360" ng-model="range"> {{ range }} <button ng-click="showRange=false" type="submit">X</button>
-								<input type="range" min="0" max="500" ng-model="width"> {{ width }} <br>
-								<input type="radio"  value="30" ng-model="width"> 30
-							  <input type="radio"  value="60" ng-model="width"> 60
-							  <input type="radio"  value="90" ng-model="width"> 90
-							</form>
-						</div> -->
-					<!-- </div>
-		</div>
-		<div class="column">
-		</div>
-	</div> -->
-
-
-		<!-- <div id="header">MENU <br>
-			<button ng-click='click()'>import picture</button>
-			<button ng-click="insert()">insert WIFI</button>
-			<button ng-click="raduis()">insert cctv</button>
-		</div> -->
-
-
-
-		<!-- <div id="content">
-			<div id="column_left">
-				<div ng-show="showRange">
-					<br>
-					raduis cctv {{idCctv}}
-					<form ng-submit="cctvSubmit()">
-						<input type="range" min="0" max="360" ng-model="range"> {{ range }} <button ng-click="showRange=false" type="submit">X</button>
-						<input type="range" min="0" max="500" ng-model="width"> {{ width }} <br>
-						<input type="radio"  value="30" ng-model="width"> 30
-					  <input type="radio"  value="60" ng-model="width"> 60
-					  <input type="radio"  value="90" ng-model="width"> 90
-					</form>
-				</div>
-			</div> -->
-
-
-			<!-- <div id="column_right">
-				<div  id="{{item.id}}" ng-repeat="item in cameraStyle" ng-mouseup="moveObj(item.id)">
-					<p>{{ item.id }}</p>{{ init() }}
-				</div>
-				<div id="{{item1.id}}" ng-repeat="item1 in raduisStyle" ng-mouseup="moveObjraduisStyle(item1.id)" ng-init="">
-					{{ initraduisStyle() }}
-					<button ng-click="tranformcctv(item1.id)">{{ item1.id }}</button>
-						<button ng-click="delcctv(item1.id)">del</button>
-				</div>
-				<div ng-show="showImage"><img src="{{ data.b64 }}"></div>
-		</div>
-		<div id="footer">FOOTER</div>
-		<div style='word-wrap:break-word'> -->
-
-
 
 		</body>
 	</html>
